# ply-processor

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: .gitignore
ply_processor/: config.py  geometry.py  gui.py  log.py  main.py  snapshot.py
ply_processor/circle/: ransac.py
ply_processor/clip/: plane.py
ply_processor/cylinder/: fixed_axis.py  leastsq.py  ransac.py  ransac_fixed_axis.py
ply_processor/plane/: o3d.py  ransac.py
ply_processor/utils/: log.py  picker.py  singleton.py
tests/: test_circle.py  test_geometry.py  test_gui.py
