[tool.taskipy.tasks]
main = {cmd = "python ply_processor/main.py", help = "Run main"}
test = {cmd = "pytest", help = "Run tests"}

[tool.poetry]
authors = ["HiraiKyo <kyo.mikhael@gmail.com>"]
description = ""
name = "ply-processor"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "3.8.19"
scipy = "1.10.1"
scikit-learn = "1.3.2"
pandas = "2.0.3"
matplotlib = "3.7.5"
pyqt6 = "^6.7.1"
open3d = "^0.18.0"
result = "^0.17.0"
pyyaml = "^6.0.1"
addict = "^2.4.0"
tqdm = "^4.66.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.4"
pytest = "^8.3.1"
taskipy = "^1.13.0"


[[tool.mypy.overrides]]
module = ["open3d", "pandas"]
ignore_missing_imports = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
